Adicionado CRUD de Funcionario e correções em Relatorios