@@ -6,15 +6,11 @@ import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
 import javafx.scene.input.MouseEvent;
+
 import java.awt.Desktop;
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.sql.Date;
-import java.time.LocalDate;
-import java.time.ZoneId;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -33,23 +29,9 @@ public class RelatorioView {
     }
 
     public void carregarRelatorios() {
-        List<Path> paths = service.listarRelatoriosRecentes();
-        relatorios = paths.stream()
-                .map(p -> {
-                    try {
-                        BasicFileAttributes attrs = Files.readAttributes(p, BasicFileAttributes.class);
-                        LocalDate dataCriacao = attrs.creationTime().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
-                        return new Relatorio(p.getFileName().toString(), Date.valueOf(dataCriacao), p.toAbsolutePath().toString());
-                    } catch (IOException e) {
-                        e.printStackTrace();
-                        return null;
-                    }
-                })
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        relatorios = service.listarRelatoriosRegistrados();
         atualizarLista("");
     }
-
 
     public void filtrar() {
         String filtro = filtroNome.getText().toLowerCase();
@@ -59,7 +41,7 @@ public class RelatorioView {
     private void atualizarLista(String filtro) {
         List<Relatorio> filtrados = relatorios.stream()
                 .filter(r -> r.getNomeArquivo().toLowerCase().contains(filtro))
-                .toList();
+                .collect(Collectors.toList());
         listViewRelatorios.setItems(FXCollections.observableArrayList(filtrados));
     }
 
@@ -79,13 +61,10 @@ public class RelatorioView {
                         if (Desktop.isDesktopSupported()) {
                             Desktop.getDesktop().open(arquivo);
                         } else {
-                            // fallback para Linux com ProcessBuilder
-                            ProcessBuilder pb = new ProcessBuilder("xdg-open", arquivo.getAbsolutePath());
-                            pb.start();
+                            new ProcessBuilder("xdg-open", arquivo.getAbsolutePath()).start();
                         }
                     } catch (Exception e) {
                         e.printStackTrace();
-                        // Mostrar alerta na thread JavaFX
                         javafx.application.Platform.runLater(() -> {
                             new Alert(Alert.AlertType.ERROR, "Erro ao abrir o arquivo").show();
                         });
@@ -94,6 +73,4 @@ public class RelatorioView {
             }
         }
     }
-
-
 }
